--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15400" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15404"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -28,17 +28,17 @@
                     <color key="textColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码或手机验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl" customClass="CNBaseTF">
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入密码或手机验证码" textAlignment="natural" minimumFontSize="14" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ZI9-1o-5Rl" customClass="CNBaseTF">
                     <rect key="frame" x="0.0" y="48" width="276" height="30"/>
                     <color key="textColor" red="1" green="1" blue="1" alpha="0.90000000000000002" colorSpace="custom" customColorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                    <fontDescription key="fontDescription" name="DINAlternate-Bold" family="DIN Alternate" pointSize="15"/>
                     <textInputTraits key="textInputTraits"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="kAY-jw-DJs"/>
                     </connections>
                 </textField>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-wj-JDq">
-                    <rect key="frame" x="288" y="48" width="88" height="30"/>
+                    <rect key="frame" x="268" y="48" width="88" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="88" id="XIK-Mj-6In"/>
                     </constraints>
@@ -50,7 +50,7 @@
                         <action selector="sendCode:" destination="-1" eventType="touchUpInside" id="uem-8u-b8Y"/>
                     </connections>
                 </button>
-                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzN-sK-jsu">
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZzN-sK-jsu">
                     <rect key="frame" x="346" y="48" width="30" height="30"/>
                     <state key="normal" image="l_password_s"/>
                     <state key="selected" image="l_password"/>
@@ -69,7 +69,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="zNf-wj-JDq" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="4ZO-41-Z1U"/>
-                <constraint firstAttribute="trailing" secondItem="zNf-wj-JDq" secondAttribute="trailing" id="6wB-xG-Gce"/>
+                <constraint firstAttribute="trailing" secondItem="zNf-wj-JDq" secondAttribute="trailing" constant="20" id="6wB-xG-Gce"/>
                 <constraint firstItem="lgT-N8-sqa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ani-bP-Ewx"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="zNf-wj-JDq" secondAttribute="bottom" constant="10" id="DSn-Gm-DgF"/>
                 <constraint firstAttribute="bottom" secondItem="cfA-lO-mIA" secondAttribute="bottom" id="FZe-Wb-KzL"/>
