--- a/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
+++ b/HYNewNest/Features(主代码)/LoginRegisterComponent/View/CNCodeInputView.xib
@@ -38,7 +38,7 @@
                     </connections>
                 </textField>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zNf-wj-JDq">
-                    <rect key="frame" x="268" y="48" width="88" height="30"/>
+                    <rect key="frame" x="273" y="48" width="88" height="30"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="88" id="XIK-Mj-6In"/>
                     </constraints>
@@ -69,7 +69,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="zNf-wj-JDq" firstAttribute="centerY" secondItem="ZI9-1o-5Rl" secondAttribute="centerY" id="4ZO-41-Z1U"/>
-                <constraint firstAttribute="trailing" secondItem="zNf-wj-JDq" secondAttribute="trailing" constant="20" id="6wB-xG-Gce"/>
+                <constraint firstAttribute="trailing" secondItem="zNf-wj-JDq" secondAttribute="trailing" constant="15" id="6wB-xG-Gce"/>
                 <constraint firstItem="lgT-N8-sqa" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Ani-bP-Ewx"/>
                 <constraint firstItem="cfA-lO-mIA" firstAttribute="top" secondItem="zNf-wj-JDq" secondAttribute="bottom" constant="10" id="DSn-Gm-DgF"/>
                 <constraint firstAttribute="bottom" secondItem="cfA-lO-mIA" secondAttribute="bottom" id="FZe-Wb-KzL"/>
@@ -83,7 +83,7 @@
                 <constraint firstItem="ZI9-1o-5Rl" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="voB-f1-Kvo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="110.14492753623189" y="-117.52232142857142"/>
+            <point key="canvasLocation" x="-101" y="-90"/>
         </view>
     </objects>
     <resources>
