--- a/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
+++ b/HYNewNest/Features(主代码)/MeComponent/Controller/CNMineVC.xib
@@ -230,10 +230,10 @@
                                                 <constraint firstAttribute="width" constant="70" id="uUe-Od-ACw"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                            <state key="normal" title="USDT钱包">
+                                            <state key="normal" title="CNY钱包">
                                                 <color key="titleColor" red="0.062745098039215685" green="0.70588235294117641" blue="0.8666666666666667" alpha="1" colorSpace="calibratedRGB"/>
                                             </state>
-                                            <state key="selected" title="CNY钱包"/>
+                                            <state key="selected" title="USDT钱包"/>
                                             <userDefinedRuntimeAttributes>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                     <integer key="value" value="12"/>
@@ -932,7 +932,7 @@
                 <constraint firstItem="Q5M-cg-NOt" firstAttribute="bottom" secondItem="9b1-FJ-wgg" secondAttribute="bottom" id="U2X-Xf-AIn"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
-            <point key="canvasLocation" x="27.536231884057973" y="57.589285714285708"/>
+            <point key="canvasLocation" x="-275" y="61"/>
         </view>
     </objects>
     <resources>
